@@ -25,6 +25,7 @@ import org.openrewrite.marker.Range;
 import org.openrewrite.tree.ParseError;
 import software.coley.recaf.analytics.logging.DebuggingLogger;
 import software.coley.recaf.analytics.logging.Logging;
+import software.coley.recaf.behavior.Closing;
 import software.coley.recaf.info.AndroidClassInfo;
 import software.coley.recaf.info.ClassInfo;
 import software.coley.recaf.info.JvmClassInfo;
@@ -50,12 +51,12 @@ import software.coley.recaf.util.FxThreadUtil;
 import software.coley.recaf.util.Lang;
 import software.coley.recaf.util.StringUtil;
 import software.coley.recaf.util.threading.ThreadPoolFactory;
+import software.coley.recaf.util.threading.ThreadUtil;
 import software.coley.recaf.workspace.model.Workspace;
 
 import java.time.Duration;
 import java.util.*;
 import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
 
 /**
@@ -67,7 +68,7 @@ import java.util.concurrent.Future;
  * @see AssemblerContextActionSupport Alternative for context actions on assembly sources.
  */
 @Dependent
-public class JavaContextActionSupport implements EditorComponent, UpdatableNavigable {
+public class JavaContextActionSupport implements EditorComponent, UpdatableNavigable, Closing {
 	private static final DebuggingLogger logger = Logging.get(JavaContextActionSupport.class);
 	private static final long REPARSE_ELAPSED_TIME = 2_000L;
 	private final ExecutorService parseThreadPool = ThreadPoolFactory.newSingleThreadExecutor("java-parse");
@@ -88,8 +89,8 @@ public class JavaContextActionSupport implements EditorComponent, UpdatableNavig
 
 	@Inject
 	public JavaContextActionSupport(@Nonnull CellConfigurationService cellConfigurationService,
-									@Nonnull AstService astService,
-									@Nonnull Workspace workspace) {
+	                                @Nonnull AstService astService,
+	                                @Nonnull Workspace workspace) {
 		this.cellConfigurationService = cellConfigurationService;
 		this.astService = astService;
 		contextHelper = new AstContextHelper(workspace);
@@ -179,40 +180,23 @@ public class JavaContextActionSupport implements EditorComponent, UpdatableNavig
 			queuedSelectionTask = () -> select(member);
 		} else {
 			queuedSelectionTask = null;
-			SortedMap<Range, Tree> map = AstRangeMapper.computeRangeToTreeMapping(unit, editor.getText());
-			for (Map.Entry<Range, Tree> entry : map.entrySet()) {
-				Tree tree = entry.getValue();
-				Range range = entry.getKey();
+			try {
+				SortedMap<Range, Tree> map = AstRangeMapper.computeRangeToTreeMapping(unit, editor.getText());
+				for (Map.Entry<Range, Tree> entry : map.entrySet()) {
+					Tree tree = entry.getValue();
+					Range range = entry.getKey();
 
-				// Check against method and variable (field) declarations.
-				if (member.isMethod() && tree instanceof J.MethodDeclaration method) {
-					JavaType.Method methodType = method.getMethodType();
+					// Check against method and variable (field) declarations.
+					if (member.isMethod() && tree instanceof J.MethodDeclaration method) {
+						JavaType.Method methodType = method.getMethodType();
 
-					// Extract method info.
-					String name = method.getSimpleName();
-					String desc = methodType == null ? null : AstUtils.toDesc(methodType);
-					if (method.isConstructor()) {
-						name = "<init>";
-						if (desc != null) desc = StringUtil.cutOffAtFirst(desc, ")") + ")V";
-					}
-
-					// Compare to passed member.
-					if (member.getName().equals(name) && (desc == null || member.getDescriptor().equals(desc))) {
-						// Select it in the editor.
-						selectRange(range);
-						return;
-					}
-				} else if (member.isField() && tree instanceof J.VariableDeclarations variableDeclarations) {
-					for (J.VariableDeclarations.NamedVariable variable : variableDeclarations.getVariables()) {
-						JavaType.Variable variableType = variable.getVariableType();
-
-						// Skip variable declarations that are not fields.
-						if (variableType != null && !(variableType.getOwner() instanceof JavaType.FullyQualified))
-							continue;
-
-						// Extract variable info.
-						String name = variable.getSimpleName();
-						String desc = variableType == null ? null : AstUtils.toDesc(variableType);
+						// Extract method info.
+						String name = method.getSimpleName();
+						String desc = methodType == null ? null : AstUtils.toDesc(methodType);
+						if (method.isConstructor()) {
+							name = "<init>";
+							if (desc != null) desc = StringUtil.cutOffAtFirst(desc, ")") + ")V";
+						}
 
 						// Compare to passed member.
 						if (member.getName().equals(name) && (desc == null || member.getDescriptor().equals(desc))) {
@@ -220,12 +204,33 @@ public class JavaContextActionSupport implements EditorComponent, UpdatableNavig
 							selectRange(range);
 							return;
 						}
+					} else if (member.isField() && tree instanceof J.VariableDeclarations variableDeclarations) {
+						for (J.VariableDeclarations.NamedVariable variable : variableDeclarations.getVariables()) {
+							JavaType.Variable variableType = variable.getVariableType();
+
+							// Skip variable declarations that are not fields.
+							if (variableType != null && !(variableType.getOwner() instanceof JavaType.FullyQualified))
+								continue;
+
+							// Extract variable info.
+							String name = variable.getSimpleName();
+							String desc = variableType == null ? null : AstUtils.toDesc(variableType);
+
+							// Compare to passed member.
+							if (member.getName().equals(name) && (desc == null || member.getDescriptor().equals(desc))) {
+								// Select it in the editor.
+								selectRange(range);
+								return;
+							}
+						}
+					} else if (member.getName().equals("<clinit>") && tree instanceof J.Block block && block.isStatic()) {
+						// Select it in the editor.
+						selectRange(range);
+						return;
 					}
-				} else if (member.getName().equals("<clinit>") && tree instanceof J.Block block && block.isStatic()) {
-					// Select it in the editor.
-					selectRange(range);
-					return;
 				}
+			} catch (Throwable t) {
+				logger.error("Unhandled exception in Java context support - select '{}'", member.getName(), t);
 			}
 		}
 	}
@@ -273,9 +278,13 @@ public class JavaContextActionSupport implements EditorComponent, UpdatableNavig
 	 * 		Text changed.
 	 */
 	private void handleShortDurationChange(@Nonnull PlainTextChange change) {
-		int position = change.getPosition();
-		int offset = change.getNetLength();
-		offsetMap.merge(position, offset, Integer::sum);
+		try {
+			int position = change.getPosition();
+			int offset = change.getNetLength();
+			offsetMap.merge(position, offset, Integer::sum);
+		} catch (Throwable t) {
+			logger.error("Unhandled exception merging offset-maps with new text-change", t);
+		}
 	}
 
 	/**
@@ -291,7 +300,7 @@ public class JavaContextActionSupport implements EditorComponent, UpdatableNavig
 			lastFuture.cancel(true);
 
 		// Do parsing on BG thread, it can be slower on complex inputs.
-		lastFuture = parseThreadPool.submit(() -> {
+		lastFuture = parseThreadPool.submit(ThreadUtil.wrap(() -> {
 			String text = editor.getText();
 
 			// Skip if the source hasn't changed since the last time.
@@ -322,10 +331,10 @@ public class JavaContextActionSupport implements EditorComponent, UpdatableNavig
 				logger.warn("Could not create Java AST model from source of: {} after {}ms", classNameEsc, diff);
 				astAvailabilityButton.setUnavailable();
 			} else {
-				SourceFile result = results.get(0);
+				SourceFile result = results.getFirst();
 				if (result instanceof ParseError parseError) {
 					unit = null;
-					ParseExceptionResult errResult = (ParseExceptionResult) parseError.getMarkers().getMarkers().get(0);
+					ParseExceptionResult errResult = (ParseExceptionResult) parseError.getMarkers().getMarkers().getFirst();
 					logger.warn("Parse error from source of: {} after {}ms, err={}",
 							classNameEsc, diff, errResult.getMessage());
 					astAvailabilityButton.setParserError(errResult);
@@ -342,7 +351,7 @@ public class JavaContextActionSupport implements EditorComponent, UpdatableNavig
 
 			// Wipe offset map now that we have a new AST
 			offsetMap.clear();
-		});
+		}));
 	}
 
 	/**
@@ -444,7 +453,13 @@ public class JavaContextActionSupport implements EditorComponent, UpdatableNavig
 
 	@Override
 	public void disable() {
-		// no-op
+		close();
+	}
+
+	@Override
+	public void close() {
+		if (!parseThreadPool.isShutdown())
+			parseThreadPool.shutdownNow();
 	}
 
 	@Override
@@ -456,7 +471,7 @@ public class JavaContextActionSupport implements EditorComponent, UpdatableNavig
 			// This addresses situations where changes to the class introduce new type dependencies.
 			// If we used the existing parser, the newly added types would be unresolvable.
 			ClassInfo classInfo = classPath.getValue();
-			Executors.newSingleThreadExecutor().submit(() -> initialize(classInfo));
+			ThreadUtil.run(() -> initialize(classInfo));
 		}
 	}
 
